package io.github.mosser.arduinoml.fsm.model;

public enum SIGNAL {
	HIGH,
	LOW
}
